syntax = "proto3";
package stafihub.stafihub.rbank;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "rbank/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/stafihub/stafihub/x/rbank/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stafihub/stafihub/rbank/params";
  }
  // Queries a list of AddressPrefix items.
	rpc AddressPrefix(QueryAddressPrefixRequest) returns (QueryAddressPrefixResponse) {
		option (google.api.http).get = "/stafihub/stafihub/rbank/address_prefix/{denom}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAddressPrefixRequest {
  string denom = 1;
}

message QueryAddressPrefixResponse {
  string accAddressPrefix = 1;
  string valAddressPrefix = 2;
}

// this line is used by starport scaffolding # 3
